read the mount config without Files.readString